roles/common/files/conf/ingress/vse-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: vse
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60s"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "10m"
spec:
  rules:
  - http:
      paths:
      - path: /vse/vehicle/?(.*)
        backend:
          serviceName: vse-vehicle-service
          servicePort: 7458
      - path: /vse/face/?(.*)
        backend:
          serviceName: vse-face-service
          servicePort: 7458
